recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:9: error: type mismatch;
 found   : Double
 required: Int
	u = (x + z)/2 + (t - y)/2
                      ^DragonCurve1:10: error: type mismatch;
 found   : Double
 required: Int
	v = (y + t)/2 - (z - x)/2
                      ^